# awscurl-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: create-release.yml
src/: main.rs
