[package]
name = "awscurl-rs"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "awscurl"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.6"
clap = { version = "4.5.23", features = ["derive"] }
http = "1.2.0"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
strip = true 
lto = true
