[package]
name = "awscurl-rs"
version = "0.10.0"
edition = "2021"

[[bin]]
name = "awscurl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.6"
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
http = "1.2.0"
reqwest = "0.12.9"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"

[profile.release]
strip = true 
lto = true

[dev-dependencies]
insta = "1.41.1"
insta-cmd = "0.6.0"
